[tool.poetry]
name = "veho-ml"
version = "0.1.0"
description = "CLI & Configurations for Veho ML Platform"
authors = ["Matt DiNardo <matthew.dinardo@shipveho.com>"]
readme = "README.md"

[tool.poetry.scripts]
veho-ml = "veho_ml.main:app"

[tool.poetry.dependencies]
python = "^3.10.8"
typer = {version = "^0.7.0", extras = ["all"]}
typer-cli = "^0.0.13"
anyscale = "0.5.163"
pydantic = "^2.5.2"
mlflow = "2.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
haikunator = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
